Add query based on city, updated based on reviews
